--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "yuxi-know"
+name = "graphknow"
 version = "0.5.0.dev"
-description = "基于大模型的智能知识库与知识图谱智能体开发平台，融合了 RAG 技术与知识图谱技术，基于 LangGraph v1 + Vue.js + FastAPI + LightRAG 架构构建"
+description = "知识图谱智能体平台"
 readme = "README.md"
 requires-python = ">=3.12,<3.14"
 dependencies = [
